--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@
     width: 100%;
     margin-top: 10px;
     margin-left: -10px;
-    /* padding-right: 20px; */
+    padding-right: 20px;
 }
 
 .question {
